--- a/src/components/Crew/crew.css
+++ b/src/components/Crew/crew.css
@@ -1,7 +1,14 @@
-.crew {
-    background-color: var(--lightBlue);
+.crewContainer {
     width: 100%;
-    height: 100px;
+    height: 400px;
+    background: rgb(198,113,90);
+    background: linear-gradient(90deg, rgba(198,113,90,1) 0%, rgba(153,42,42,1) 100%);
     display: flex;
+    align-items: center;
     justify-content: center;
+    flex-direction: column;
+}
+
+.crewTitle {
+    color: var(--tan);
 }
