--- a/src/components/Price/price.css
+++ b/src/components/Price/price.css
@@ -1,7 +1,9 @@
-.footer {
+.priceContainer {
     width: 100%;
-    height: 100px;
+    height: 400px;
     background-color: var(--lightBlue);
     display: flex;
+    align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
