--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -9,9 +9,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: sticky;
-    top: 0;
-    z-index: 3;
+    
 }
 
 .logo {
@@ -31,7 +29,7 @@
     justify-content: center;
     width: 100%;
     margin: auto;
-    padding: 0;
+    padding: 20px;
     cursor: pointer;
 }
 
@@ -39,9 +37,18 @@ h2 {
     background-color: white;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
     border-radius: 20px;
-    padding: 10px;
+    padding: 20px 15px;
+    margin: 20px;
     display: flex;
     cursor: pointer;
+}
+
+h2:hover {
+    border: 1px solid black;
+}
+
+.empty {
+    width: 600px;
+    height: 300px;
 }
