--- a/src/components/Information/information.css
+++ b/src/components/Information/information.css
@@ -1,10 +1,120 @@
 .infoContainer {
     width: 100%;
-    height: 400px;
+    height: 600px;
     background: rgb(255,255,255);
     background: linear-gradient(270deg, rgba(255,255,255,1) 0%, rgba(254,182,107,1) 50%);
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+}
+
+.infoContainer h1 {
+    color: black;
+    padding: 20px 0;   
+}
+
+.artContainer {
+    width: 90%;
+    height: 60%;
+}
+
+.artContainer h1 {
+    color: black;
+    font-size: 20px;
+    text-align: center;
+}
+
+.artTop h1 {
+    color: white;
+}
+
+img {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    border-radius: 10px;
+}
+
+.infoContainer .artContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.artContainer .artTop {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+.artContainer .artTop .art0 {
+    width: 100%;
+    height: 100%;
+    background-color: green;
+    border-radius: 10px;
+    margin: 20px 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.artContainer .artTop .art1 {
+    width: 100%;
+    height: 100%;
+    background-color: yellow;
+    border-radius: 10px;
+    margin: 20px 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.artContainer .artTop .art2 {
+    width: 100%;
+    height: 100%;
+    background-color: pink;
+    border-radius: 10px;
+    margin: 20px 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.artContainer .artBottom {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-top-left-radius: 10px;
+    margin: 20px 0;
+}
+
+.artContainer .artBottom .art3 {
+    width: 100%;
+    height: 100%;
+    background-color: red;
+    border-radius: 10px;
+    margin: 20px 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.artContainer .artBottom .art4 {
+    width: 100%;
+    height: 100%;
+    background-color: orange;
+    border-radius: 10px;
+    margin: 20px 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.artContainer .artBottom .art5 {
+    width: 100%;
+    height: 100%;
+    background-color: blue;
+    border-radius: 10px;
+    margin: 20px 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.artContainer .artTop .artBottom {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
