--- a/src/components/Information/information.css
+++ b/src/components/Information/information.css
@@ -11,7 +11,7 @@
 
 .infoContainer h1 {
     color: black;
-    padding: 20px 0;   
+    padding: 20px;   
 }
 
 .artContainer {
@@ -19,18 +19,16 @@
     height: 60%;
 }
 
-.artContainer h1 {
-    color: black;
-    font-size: 20px;
-    text-align: center;
-}
-
-.artTop h1 {
-    color: white;
+.infoContainer .artContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 img {
-    width: 100%;
+    width: auto;
+    height: 200px;
     display: flex;
     align-items: center;
     justify-items: center;
@@ -50,14 +48,12 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 20px 0;
+    margin: 20px 20px;
 }
 
 .artContainer .artTop .art0 {
     width: 100%;
     height: 100%;
-    background-color: green;
-    border-radius: 10px;
     margin: 20px 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -65,16 +61,12 @@ img {
 .artContainer .artTop .art1 {
     width: 100%;
     height: 100%;
-    background-color: yellow;
-    border-radius: 10px;
     margin: 20px 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 .artContainer .artTop .art2 {
     width: 100%;
     height: 100%;
-    background-color: pink;
-    border-radius: 10px;
     margin: 20px 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -85,15 +77,12 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    border-top-left-radius: 10px;
-    margin: 20px 0;
+    margin: 20px 20px;
 }
 
 .artContainer .artBottom .art3 {
     width: 100%;
     height: 100%;
-    background-color: red;
-    border-radius: 10px;
     margin: 20px 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -101,20 +90,12 @@ img {
 .artContainer .artBottom .art4 {
     width: 100%;
     height: 100%;
-    background-color: orange;
-    border-radius: 10px;
     margin: 20px 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 .artContainer .artBottom .art5 {
     width: 100%;
     height: 100%;
-    background-color: blue;
-    border-radius: 10px;
     margin: 20px 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.artContainer .artTop .artBottom {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
