--- a/src/components/Information/information.css
+++ b/src/components/Information/information.css
@@ -9,14 +9,18 @@
     flex-direction: column;
 }
 
-.infoContainer h1 {
-    color: black;
-    padding: 20px;   
+.infoTitle {
+    margin-top: 20px;
+    flex-direction: column; 
+}
+
+.infoTitle h1 {
+    color: black;  
 }
 
 .artContainer {
     width: 90%;
-    height: 60%;
+    height: auto;
 }
 
 .infoContainer .artContainer {
@@ -27,7 +31,7 @@
 }
 
 img {
-    width: auto;
+    width: 100%;
     height: 200px;
     display: flex;
     align-items: center;
@@ -43,7 +47,7 @@ img {
 }
 
 .artContainer .artTop {
-    width: 100%;
+    width: 200px;
     height: 50%;
     display: flex;
     align-items: center;
@@ -51,51 +55,50 @@ img {
     margin: 20px 20px;
 }
 
-.artContainer .artTop .art0 {
-    width: 100%;
-    height: 100%;
+.artContainer .artTop .art0 img {
+    width: 300px;
+    height: auto;
     margin: 20px 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.artContainer .artTop .art1 {
-    width: 100%;
-    height: 100%;
+.artContainer .artTop .art1 img {
+    width: 300px;
+    height: auto;
     margin: 20px 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-.artContainer .artTop .art2 {
-    width: 100%;
-    height: 100%;
+.artContainer .artTop .art2 img {
+    width: 300px;
+    height: auto;
     margin: 20px 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .artContainer .artBottom {
-    width: 100%;
     height: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 20px 20px;
+    margin: 20px auto;
 }
 
-.artContainer .artBottom .art3 {
-    width: 100%;
-    height: 100%;
+.artContainer .artBottom .art3 img {
+    width: 300px;
+    height:  auto;
     margin: 20px 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.artContainer .artBottom .art4 {
-    width: 100%;
-    height: 100%;
+.artContainer .artBottom .art4 img {
+    width: 300px;
+    height: auto;
     margin: 20px 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-.artContainer .artBottom .art5 {
-    width: 100%;
-    height: 100%;
+.artContainer .artBottom .art5 img {
+    width: 300px;
+    height: auto;
     margin: 20px 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
