--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -33,8 +33,8 @@
 
 .introContainer .iPhone {
     display: flex;
-    height: 400px;
-    width: 270px;
+    height: 450px;
+    width: auto;
     display: flex;
     align-items: right;
 }
@@ -48,7 +48,7 @@
 
 .introBtns .googlePlay{
     padding:0 20px 0 0;
-    width: 200px;
+    width: auto;
     height: 80px;
     display: flex;
     align-items: center;
@@ -57,7 +57,7 @@
 
 .introBtns .appleStore{
     padding: 0 20px 0 0;
-    width: 200px;
+    width: auto;
     height: 80px;
     display: flex;
     align-items: center;
