--- a/src/components/Crew/crew.css
+++ b/src/components/Crew/crew.css
@@ -11,6 +11,7 @@
 
 .crewTitle {
     color: var(--tan);
+    padding: 20px;
 }
 
 .wrapper {
@@ -55,6 +56,7 @@
     border-radius: 12px;
     scroll-behavior: smooth;
     scrollbar-width:  none;
+    height: 200px;
 }
 
 .carousel .card {
