--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -14,7 +14,7 @@
 
 .logo {
     width: 200px;
-    height: 200px;
+    height: auto;
     display: flex;
     align-items: center;
     margin: 50px;
