--- a/src/components/Crew/crew.css
+++ b/src/components/Crew/crew.css
@@ -12,6 +12,7 @@
 .crewTitle {
     color: var(--tan);
     padding: 20px;
+    font-size: 2rem;
 }
 
 .wrapper {
@@ -52,7 +53,7 @@
     justify-content: center;
     align-items: center;
     grid-auto-flow: column;
-    grid-auto-columns: calc((100% / 5) - 80px);
+    /*grid-auto-columns: calc((100% / 5) - 80px);*/
     overflow-x: auto;
     scroll-snap-type: x mandatory;
     gap: 16px;
