--- a/src/components/Price/price.css
+++ b/src/components/Price/price.css
@@ -1,6 +1,6 @@
 .priceContainer {
     width: 100%;
-    height: 400px;
+    height: 600px;
     background-color: var(--lightBlue);
     display: flex;
     align-items: center;
@@ -8,49 +8,144 @@
     flex-direction: column;
 }
 
-.priceContainer .priceTitle h1 {
-    color: red;
+.heading {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 20px;
 }
 
-.priceContainer .priceDescription p {
-    color: blue;
+.heading h1 {
+    font-size: 2.5rem;
+    color: black;
+}
+
+.heading p {
+    font-size: 1rem;
+    color: black;
+    padding: 5px;
 }
 
 .priceSwitch {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.priceSwitch .priceSwitchOption {
-    width: 50%;
-    margin: 10px;
+    width: auto;
+    height: 40px;
+    padding: 20px;
     background-color: white;
     border-radius: 10px;
+    margin: 5px;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+}
+
+.priceSwitchOption1 {
+    background-color: white;
+    width: 100%;
     padding: 20px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px 0 0 10px;
+    border: 1px solid  lightgrey;
+}
+
+.priceSwitchOption2 {
+    background-color: orange;
+    width: 100%;
+    padding: 20px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    border-radius: 0 10px 10px 0;
+    border: 1px solid  lightgrey;
+}
+
+.priceSwitchOption2:hover {
+    background-color: orangered;
+    color: black;
 }
 
 .freeContainer {
     display: flex;
     width: 50%;
+    height: 225px;
     margin: 10px;
     flex-direction: column;
     background-color: white;
     border-radius: 10px;
     padding: 20px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
 }
 
-.freeContainer .amount {
-    color: green;
+.freeContainer .freeOption {
+    width: 100%;
+    height: auto;
+    align-items: center;
     justify-content: center;
-    align-items: left;
-    display: flex;
+    padding: 20px;
+}
+
+.freeOption p {
+    font-size: 1rem;
+    color: black;
+    padding: 5px;
 }
 
 .premiumContainer {
+    display: flex;
     width: 50%;
+    height: 225px;
     margin: 10px;
+    flex-direction: column;
     background-color: white;
     border-radius: 10px;
     padding: 20px;
-}   
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.priceOptions {
+    width: 50%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    margin: 20px;
+}
+
+.premiumButton {
+    width: 200px;
+    height: 50px;
+    background-color: orange;
+    color: black;
+    border-radius: 10px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    margin: 20px;
+    padding: 10px;
+}
+
+.premiumList {
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    font-size: 1rem;
+}
+
+.premiumList .premiumLeftContainer {
+    width: 50%;
+}
+
+.premiumList .premiumRightContainer {
+    width: 50%;
+}
