--- a/src/components/Questions/questions.css
+++ b/src/components/Questions/questions.css
@@ -1,9 +1,52 @@
 .questionsContainer {
     width: 100%;
-    height: 400px;
+    height: 650px;
     background: white;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    padding: 20px;
+}
+
+.headerQuestions {
+    padding: 20px;
+}
+
+.headerQuestions h1 {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+u {
+    text-decoration: underline;
+}
+
+.questions {
+    width: 80%;
+    height: 100%;
+    padding: 20px;
+}
+
+h1 {
+    font-size: 1rem;
+}
+
+.leftQuestions {
+    width: 50%;
+    float: left;
+    font-size: 1rem;
+}
+
+.leftQuestions h1 {
+    font-size: 1rem;
+}
+
+.rightQuestions {
+    width: 50%;
+    float: right;
+    font-size: 1rem;
 }
