--- a/src/components/Information/information.css
+++ b/src/components/Information/information.css
@@ -1,6 +1,6 @@
 .infoContainer {
     width: 100%;
-    height: 600px;
+    height: 700px;
     background: rgb(255,255,255);
     background: linear-gradient(270deg, rgba(255,255,255,1) 0%, rgba(254,182,107,1) 50%);
     display: flex;
@@ -11,7 +11,8 @@
 
 .infoTitle {
     margin-top: 20px;
-    text-align: center; 
+    text-align: center;
+    font-size: 2rem; 
 }
 
 .infoTitle h1 {
