--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -14,23 +14,21 @@
 
 .logo {
     width: 200px;
-    height: auto;
+    height: 100%;
     display: flex;
     align-items: center;
-    margin: 50px;
-    background-color: white;
+    justify-content: center;
+    margin-left: 50px;
+    float: left;
+    cursor: pointer;
 }
 
 .desktopMenu{
     color: black;
-    background-color: white;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
-    margin: auto;
-    padding: 20px;
-    cursor: pointer;
 }
 
 h2 {
@@ -45,7 +43,7 @@ h2 {
 }
 
 h2:hover {
-    border: 1px solid black;
+    background-color: var(--tan);
 }
 
 .empty {
