--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,7 +1,106 @@
 .footer {
     width: 100%;
-    height: 100px;
+    height: 400px;
     background-color: var(--lightBlue);
     display: flex;
     justify-content: center;
+    align-items: center;
+}
+
+.leftContainer {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    float: left;
+}
+
+.mottoContainer {
+    width: 100%;
+}
+
+.mottoContainer h1 {
+    font-size: 2rem;
+    color: var(--darkBlue);
+    text-align: center;
+}
+
+.mottoContainer p {
+    font-size: 1rem;
+    color: var(--darkBlue);
+    text-align: center;
+}
+
+.rightContainer {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    float: right;
+}
+
+.socials {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.socials .circles {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.circles {
+    width: 50%;
+    height: 50%;
+    border-radius: 50%;
+    background-color: blue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.circle1,
+.circle2,
+.circle3,
+.circle4 {
+    width: 50%;
+    height: 50%;
+    border-radius: 50%;
+    background-color: var(--darkBlue);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+
+}
+
+.lineBreak {
+    width: 100%;
+    border: 1px solid var(--darkBlue);
+    height: 1px;
+}
+
+.bottomContainer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.bottomleft {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.bottomRight {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
