--- a/src/components/Price/price.css
+++ b/src/components/Price/price.css
@@ -30,13 +30,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: auto;
-    height: 40px;
+    width: 160px;
+    height: 50px;
     padding: 20px;
     background-color: white;
     border-radius: 10px;
     margin: 5px;
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
     cursor: pointer;
 }
 
@@ -53,14 +52,21 @@
 
 .priceSwitchOption2 {
     background-color: orange;
-    width: 100%;
+    width: 50%;
+    height: 20px;
     padding: 20px;
     text-align: center;
     align-items: center;
     justify-content: center;
+    text-align: center;
     border-radius: 10px;
     border-radius: 0 10px 10px 0;
     border: 1px solid  lightgrey;
+}
+
+.priceSwitchOption2 h1 {
+    color: black;
+    padding: 20px;
 }
 
 .priceSwitchOption2:hover {
