--- a/src/components/Connect/connect.css
+++ b/src/components/Connect/connect.css
@@ -8,7 +8,7 @@
     background: linear-gradient(270deg, rgba(198,113,90,1) 0%, rgba(254,182,107,1) 100%);
 }
 
-.leftContainer {
+.leftConnect {
     width: 50%;
     height: 100%;
     display: flex;
@@ -35,28 +35,33 @@ p {
     justify-content: center;
 }
 
-.googlePlay {
+.socailsContainer .googlePlay {
     margin: 10px 0;
-    width: 100px;
-    height: auto;
-    margin: 5px ;
-}
-
-.appleStore {
-    margin: 10px 0;
-    width: 100px;
+    width: 150px;
     height: auto;
     margin: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.lineBreak {
+.socailsContainer .appleStore {
+    margin: 10px 0;
+    width: 150px;
+    height: auto;
+    margin: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.verticalLine {
     border-left: 2px solid black;
     height: 10%;
     margin-left: -3px;
-    
 }
 
-.rightContainer {
+.rightConnect {
     width: 50%;
     height: 100%;
     display: flex;
@@ -71,4 +76,14 @@ p {
     align-items: center;
     justify-content: center;
     text-align: center;
+}
+
+.discord {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #7289DA;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
