--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,38 +1,83 @@
 .footer {
     width: 100%;
-    height: 400px;
+    height: 300px;
     background-color: var(--lightBlue);
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
+.footer .topFooter {
+    height: 50%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.topFooter {
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.leftContainer {
-    width: 50%;
+.topLeft {
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     float: left;
+    padding: 20px;
+    flex-direction: column;
+}
+
+.lute {
+    width: 30px;
+    height: auto;
+    padding: 30px;
+    display: flex;
+}
+
+.brandTitles {
+    display: flex;
+    flex-direction: column;
 }
 
 .mottoContainer {
     width: 100%;
+    height: 50%;
+    padding: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .mottoContainer h1 {
-    font-size: 2rem;
-    color: var(--darkBlue);
-    text-align: center;
+    font-size: 1rem;
+    color: black;
 }
 
 .mottoContainer p {
     font-size: 1rem;
-    color: var(--darkBlue);
-    text-align: center;
+    color:black;
 }
 
-.rightContainer {
-    width: 50%;
+.links {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.links p {
+    font-size: 1rem;
+    color: black;
+    padding: 0 30px 0 20px;
+}
+
+.topRight {
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -44,62 +89,72 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    float: right;
+    padding: 20px;
 }
 
 .socials .circles {
-    width: 50%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+.circles {
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .circles {
-    width: 50%;
-    height: 50%;
+    margin: 20px;
+    padding: 20px;
+}
+
+.circle1 {
+    height: 50px;
+    width: 50px;
     border-radius: 50%;
+    padding: 10px;
+    margin: 10px;
+    background-color: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.circle2 {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    padding: 10px;
+    margin: 10px;
     background-color: blue;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.circle1,
-.circle2,
-.circle3,
-.circle4 {
-    width: 50%;
-    height: 50%;
+.circle3 {
+    height: 50px;
+    width: 50px;
     border-radius: 50%;
-    background-color: var(--darkBlue);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding: 10px;
     margin: 10px;
-
-}
-
-.lineBreak {
-    width: 100%;
-    border: 1px solid var(--darkBlue);
-    height: 1px;
-}
-
-.bottomContainer {
-    width: 100%;
+    background-color: green;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.bottomleft {
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.bottomRight {
-    width: 50%;
+.circle4 {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    padding: 10px;
+    margin: 10px;
+    background-color: yellow;
     display: flex;
     justify-content: center;
     align-items: center;
