--- a/src/components/Price/price.css
+++ b/src/components/Price/price.css
@@ -33,7 +33,6 @@
     width: 160px;
     height: 50px;
     padding: 20px;
-    background-color: white;
     border-radius: 10px;
     margin: 5px;
     cursor: pointer;
@@ -41,13 +40,21 @@
 
 .priceSwitchOption1 {
     background-color: white;
-    width: 100%;
+    width: 50%;
+    height: 20px;
     padding: 20px;
-    text-align: center;
+    display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 10px 0 0 10px;
-    border: 1px solid  lightgrey;
+}
+
+.priceSwitchOption1 h1 {
+    color: black;
+    font-size: 1rem;
+    justify-content: center;
+    align-items: center;
+    display: flex;
 }
 
 .priceSwitchOption2 {
@@ -55,7 +62,7 @@
     width: 50%;
     height: 20px;
     padding: 20px;
-    text-align: center;
+    display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -66,12 +73,18 @@
 
 .priceSwitchOption2 h1 {
     color: black;
-    padding: 20px;
+    font-size: 1rem;
+    justify-content: center;
+    align-items: center;
+    display: flex;
 }
 
 .priceSwitchOption2:hover {
     background-color: orangered;
     color: black;
+    justify-content: center;
+    align-items: center;
+    display: flex;
 }
 
 .freeContainer {
@@ -132,11 +145,24 @@
     background-color: orange;
     color: black;
     border-radius: 10px;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
     margin: 20px;
     padding: 10px;
+}
+
+.premiumButton h4 {
+    font-size: 1rem;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.premiumButton p {
+    font-size: 1rem;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .premiumList {
@@ -144,14 +170,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 20px;
     font-size: 1rem;
 }
 
 .premiumList .premiumLeftContainer {
     width: 50%;
+    line-height: 1.5rem;
+    margin-bottom: 1rem;
 }
 
 .premiumList .premiumRightContainer {
     width: 50%;
+    line-height: 1.5rem;
+    margin-bottom: 1rem;
 }
