--- a/src/components/Questions/questions.css
+++ b/src/components/Questions/questions.css
@@ -6,11 +6,18 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding: 20px;
 }
 
 .headerQuestions {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     padding: 20px;
+    border-radius: 10px;
+    margin-bottom: 20px;
 }
 
 .headerQuestions h1 {
