--- a/src/components/Connect/connect.css
+++ b/src/components/Connect/connect.css
@@ -78,12 +78,18 @@ p {
     text-align: center;
 }
 
-.discord {
-    width: 50px;
-    height: 50px;
+.discordConnect {
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
-    background-color: #7289DA;
+    color: white;
+    background-color: #5865F2;
+    font-size: 35px;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.discordConnect:hover {
+    background-color: #4054b2;
 }
