--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -7,21 +7,6 @@
     display: flex;
 }
 
-.footer .topFooter {
-    height: 50%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.topFooter {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .topLeft {
     width: 100%;
     display: flex;
@@ -89,73 +74,80 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    float: right;
-    padding: 20px;
 }
 
-.socials .circles {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-}
-
-.circles {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.circles {
-    margin: 20px;
-    padding: 20px;
-}
-
-.circle1 {
+.discordFooter {
+    font-size: 2rem;
     height: 50px;
     width: 50px;
     border-radius: 50%;
+    background-color: #33b2e8;
     padding: 10px;
     margin: 10px;
-    background-color: red;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-.circle2 {
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
-    padding: 10px;
-    margin: 10px;
-    background-color: blue;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    color: white;
+    cursor: pointer;
 }
 
-.circle3 {
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
-    padding: 10px;
-    margin: 10px;
-    background-color: green;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.discordFooter :hover {
+    color: black;
 }
 
-.circle4 {
+.instagram {
+    font-size: 2rem;
     height: 50px;
     width: 50px;
     border-radius: 50%;
+    background-color: #33b2e8;
     padding: 10px;
     margin: 10px;
-    background-color: yellow;
     display: flex;
     justify-content: center;
     align-items: center;
+    color: white;
+    cursor: pointer;
+}
+
+.instagram :hover {
+    color: black;
+}
+
+.tiktok {
+    font-size: 2rem;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    background-color: #33b2e8;
+    padding: 10px;
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    cursor: pointer;
+}
+
+.tiktok :hover {
+    color: black;
+}
+
+.youtube {
+    font-size: 2rem;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    background-color: #33b2e8;
+    padding: 10px;
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    cursor: pointer;
+}
+
+.youtube :hover {
+    color: black;
 }
